tests/NormalTests/paczka1/fuzzy1/39515743.err
Error in line 30: LqWP A590 68,6
Error in line 31: veUbles A855 59,8
Error in line 34: A855 A42 7,7
